[package]
name = "properties"
description = "Handle property files"
version = "0.1.1"
authors = ["Caleb Marble <marblenix@users.noreply.github.com>"]
repository = "https://github.com/marblenix/properties"
edition = "2018"
keywords = ["property", "file", "config"]
categories = ["config", "filesystem"]
readme = "README.md"
license = "MIT"

[dependencies]
